<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Maps SDK for Android Demos (Kotlin)</string>
    <string name="default_renderer">Default</string>
    <string name="demo_title">Google Maps API Demos</string>
    <string name="no_demos">No demos</string>
    <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
    <string name="map_renderer_spinner_label">Select Preferred Map Renderer</string>
    <string name="tile_overlay_demo_label">Tile Overlays</string>
    <string name="tile_overlay_demo_description">Demonstrates how to add a tile overlay to a map.</string>
    <string name="tile_coordinate_demo_label">Tile Coordinate Overlay</string>
    <string name="tile_coordinate_demo_description">Demonstrates how to add a tile overlay with tile coordinates to a map.</string>
    <string name="fade_in">Fade In Tiles</string>
    <string name="advanced_markers_demo_label">Advanced Markers</string>
    <string name="advanced_markers_demo_details">Showcases the usage of Advanced Markers.</string>
    <string name="map_id">DEMO_MAP_ID</string>
    <string name="basic_demo_label">Basic Map</string>
    <string name="basic_demo_details">Launches a map with marker pointing at Sydney.</string>
    <string name="animate">Animate</string>
    <string name="camera_demo_description">Demonstrates Camera Functions</string>
    <string name="camera_demo_label">Camera</string>
    <string name="down_arrow">\u2193</string>
    <string name="duration">Custom Duration</string>
    <string name="go_to_bondi">Go to Bondi</string>
    <string name="go_to_sydney">Go to Sydney</string>
    <string name="left_arrow">\u2190</string>
    <string name="right_arrow">\u2192</string>
    <string name="stop_animation">\u25A0</string>
    <string name="tilt_less">\u2193</string>
    <string name="tilt_more">\u2191</string>
    <string name="up_arrow">\u2191</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="circle_demo_label">Circle Demo</string>
    <string name="circle_demo_details">Demonstrate how to add circles to a map</string>
    <string name="properties_circle">Properties for Circle(s)</string>
    <string name="close_info_window_demo_label">Close Info Window Demo</string>
    <string name="close_info_window_demo_details">Demonstrates how to close the info window when the currently selected marker is retapped.</string>
    <string name="data_driven_styling_label">Data Driven Dataset Styling Demo</string>
    <string name="data_driven_styling_details">Demonstrates how to use Data Driven styling for datasets.</string>
    <string name="data_driven_boundaries_label">Data Driven Boundaries Demo</string>
    <string name="data_driven_boundaries_details">Demonstrates how to use Data Driven styling for <boundaries></boundaries>.</string>
    <string name="events_demo_label">Events</string>
    <string name="events_demo_details">Demonstrates event handling.</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="tap_instructions">Tap or long press on the map</string>
    <string name="ground_overlay_demo_label">Ground Overlays</string>
    <string name="ground_overlay_demo_details">Demonstrates how to add a GroundOverlay to a map.</string>
    <string name="transparency">Transparency</string>
    <string name="switch_image">Switch Image</string>
    <string name="indoor_demo_label">Indoor</string>
    <string name="indoor_demo_details">Demonstrates how to use the Indoor API.</string>
    <string name="activate_higher_level">Activate Higher Level</string>
    <string name="focused_building_info">Focused Building</string>
    <string name="focused_level_info">Focused Level</string>
    <string name="toggle_level_picker">Toggle Level Picker</string>
    <string name="buildings">Buildings</string>
    <string name="hybrid">Hybrid</string>
    <string name="indoor">Indoor</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>
        <item>@string/satellite</item>
        <item>@string/terrain</item>
        <item>@string/none_map</item>
    </string-array>
    <string name="layers_demo_label">Layers</string>
    <string name="layers_demo_description">Demonstrates the different map layers.</string>
    <string name="my_location">My Location</string>
    <string name="none_map">None</string>
    <string name="normal">Normal</string>
    <string name="ok">OK</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="traffic">Traffic</string>
    <string name="lite_demo_label">Lite Mode</string>
    <string name="lite_demo_details">Demonstrates some features on a map in lite mode.</string>
    <string name="lite_demo_intro">Click the map with no, one or multiple markers displayed to open the Google Maps Mobile app.</string>
    <string name="lite_go_to_darwin">Go to Darwin (No Markers)</string>
    <string name="lite_go_to_adelaide">Go to Adelaide (One Marker)</string>
    <string name="lite_go_to_australia">Go to Australia (Five Markers)</string>
    <string name="lite_list_demo_label">Lite List Demo</string>
    <string name="lite_list_demo_details">Show a list of Lite Map of different locations using RecyclerView with LinearLayoutManager and GridLayoutManager</string>
    <string name="linear">Linear</string>
    <string name="grid">Grid</string>
    <string name="custom_info_contents">Custom Info Contents</string>
    <string name="custom_info_window">Custom Info Window</string>
    <string name="default_info_window">Default Info Window</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="clear_map">Clear</string>
    <string name="flat">Flat</string>
    <string name="reset_map">Reset</string>
    <string name="map_not_ready">Map is not ready</string>
    <string name="map_color_scheme_demo_description">Demonstrates how to use the MapColorScheme.</string>
    <string name="map_color_scheme_demo_label">MapColorScheme</string>
    <string name="markers_demo_description">Demonstrates how to add Markers to a map.</string>
    <string name="markers_demo_label">Markers</string>
    <string name="on_marker_drag">onMarkerDrag.  Current Position: (%1$f, %2$f)</string>
    <string name="on_marker_drag_start">Started dragging marker</string>
    <string name="on_marker_drag_end">Marker stopped dragging</string>
    <string name="rotation">Rotation</string>
    <string name="state_badge_label">State badge</string>
    <string name="my_location_demo_label">My Location Demo</string>
    <string name="my_location_demo_details">Demonstrates how to use GMS Location.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="clickable">Clickable</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="joint_type_bevel">Bevel</string>
    <string name="joint_type_default">Default</string>
    <string name="joint_type_round">Round</string>
    <string name="pattern_dashed">Dashed</string>
    <string name="pattern_dotted">Dotted</string>
    <string name="pattern_mixed">Mixed</string>
    <string name="pattern_solid">Solid</string>
    <string name="polygon_demo_description">Demonstrates how to add Polygons to a map.</string>
    <string name="polygon_demo_details">Demonstrates how to add Polygons to a map</string>
    <string name="polygon_demo_label">Polygons</string>
    <string name="properties_australia_polygon">Properties for Polygon over Australia</string>
    <string name="stroke_alpha">Stroke Alpha</string>
    <string name="stroke_hue">Stroke Hue</string>
    <string name="stroke_joint_type">Stroke Joint Type</string>
    <string name="stroke_pattern">Stroke Pattern</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="street_view_panorama_navigation_demo_label">Street View Panorama Navigation Demo</string>
    <string name="street_view_panorama_navigation_demo_details">Street View Panorama with programmatic navigation</string>
    <string name="request_position">Position</string>
    <string name="walk_panorama">Walk</string>
    <string name="go_to_invalid">Go to Invalid Point</string>
    <string name="go_to_san_francisco">Go to San Francisco</string>
    <string name="go_to_santorini">Go to Santorini</string>
    <string name="split_street_view_panorama_and_map_demo_label">Street View Panorama and Map</string>
    <string name="split_street_view_panorama_and_map_demo_details">Demonstrates how to show a Street View panorama and map.</string>
    <string name="street_view_panorama_basic_demo_label">Street View Panorama</string>
    <string name="street_view_panorama_basic_demo_details">Standard Street View Panorama using a Fragment.</string>
    <string name="street_view_panorama_options_demo_label">Street View Panorama Options</string>
    <string name="street_view_panorama_options_demo_details">Street View Panorama with toggles for options.</string>
    <string name="navigation">Navigation</string>
    <string name="outdoor_only">Outdoor Only</string>
    <string name="zoom_gestures">Zoom Gestures</string>
    <string name="panning">Panning Gestures</string>
    <string name="streetnames">Streetnames</string>
    <string name="street_view_panorama_events_demo_label">Street View Panorama Events</string>
    <string name="street_view_panorama_events_demo_details">Standard Street View Panorama with event handling.</string>
    <string name="navigate_to_another_panorama">navigate to another panorama</string>
    <string name="pan_camera">pan camera</string>
    <string name="tap_screen">tap screen</string>
    <string name="long_press_screen">long press screen</string>
    <string name="street_view_panorama_view_demo_label">Street View Panorama View</string>
    <string name="street_view_panorama_view_demo_details">Standard Street View Panorama using a View.</string>
    <string name="tags_demo_label">Tags</string>
    <string name="tags_demo_details">Demonstrates how to get and set tags on API objects.</string>
    <string name="tags_demo_map_description">Map with a circle, ground overlay, marker, polygon and polyline.</string>
    <string name="ui_settings_demo_label">UI Settings Demo</string>
    <string name="ui_settings_demo_details">Demonstrate how to toggle the UI of a map</string>
    <string name="location">Location permission is required to run the demo</string>
    <string name="checkbox_zoom">Zoom</string>
    <string name="checkbox_compass">Compass</string>
    <string name="checkbox_my_location_layer">My Location</string>
    <string name="checkbox_level_picker">Level Picker</string>
    <string name="checkbox_map_toolbar">Map Toolbar</string>
    <string name="checkbox_zoom_gesture">Zoom Gestures</string>
    <string name="checkbox_scroll_gesture">Scroll Gestures</string>
    <string name="checkbox_tilt_gesture">Tilt Gestures</string>
    <string name="checkbox_rotate_gesture">Rotate Gestures</string>
    <string name="camera_change_message">CameraChangeListener: %1$s</string>
    <string name="region_demo_label">Visible Regions</string>
    <string name="region_demo_details">Demonstrates how to use Visible Regions.</string>
    <string name="vr_normal_button">Normal</string>
</resources>