<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2018 Google LLC

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/drag_melbourne" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flat"
            android:textSize="14sp"
            android:onClick="onToggleFlat" />

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotation" />

        <SeekBar
            android:id="@+id/rotationSeekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.libraries.maps.SupportMapFragment" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="onClearMap"
                    android:text="@string/clear_map"
                    style="?android:attr/borderlessButtonStyle"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="onResetMap"
                    android:text="@string/reset_map"
                    style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/custom_info_window_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/default_info_window"
                    android:checked="true"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/default_info_window" />

                <RadioButton
                    android:id="@+id/custom_info_contents"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/custom_info_contents" />

                <RadioButton
                    android:id="@+id/custom_info_window"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/custom_info_window" />
            </RadioGroup>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
